--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -7,6 +7,7 @@
   color: #fff;
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   border-bottom: 3px solid #2563eb; 
+  width: 100vw;
 }
 
 .logo a {
@@ -55,7 +56,7 @@
   padding: 0.5rem;
   outline: none;
   background: transparent;
-  width: 180px;
+  width: 300px;
   color: #fff;
 }
 
