--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -5,7 +5,7 @@
   padding: 1rem 2rem;
   background: linear-gradient(90deg, #1f2937, #4b5563);
   color: #fff;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   border-bottom: 3px solid #2563eb;
   width: 100vw;
 }
@@ -13,7 +13,7 @@
 .logo a {
   display: flex;
   align-items: center;
-  height: 100%; 
+  height: 100%;
 }
 
 .logo a img {
@@ -95,7 +95,7 @@
   justify-content: center;
 }
 
-.cart-button, .settings-button {
+.settings-button {
   background: none;
   border: none;
   font-size: 1.6rem;
@@ -106,8 +106,7 @@
   transition: color 0.2s ease;
 }
 
-.cart-button:hover, .settings-button:hover
- {
+.cart-button:hover, .settings-button:hover {
   color: #60a5fa;
 }
 
@@ -161,7 +160,35 @@
   transition: color 0.2s ease;
 }
 
-.dropdown-option + .dropdown-option {
+.dropdown-option+.dropdown-option {
   border-top: 1px solid #aaacb1;
   border-radius: 0px;
+}
+
+.cart-button {
+  position: relative;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.6rem;
+  color: #e5e7eb;
+}
+
+.cart-badge {
+  position: absolute;
+  top: 0px;
+  right: 16px;
+  background-color: #ef4444;
+  color: #fff;
+  padding: 2px 6px;
+  border-radius: 50%;
+  font-size: 0.75rem;
+  font-weight: bold;
+
+  width: 25px;
+  height: 25px;
+
+  border: 2px solid #fff; /* Borda branca */
+  display: flex;
+  justify-content: center;
 }
