--- a/src/components/ProductDetail/index.css
+++ b/src/components/ProductDetail/index.css
@@ -1,35 +1,38 @@
 .product-detail-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 40px 20px;
-  background-color: #0f172a;
-  color: #f8fafc;
   font-family: 'Segoe UI', sans-serif;
-  min-height: 100vh;
+
+  display: flex;
+  align-items: star;
+  justify-content: center;
+
+  width: 100%;
+
+  color: #000000;
+}
+
+.product-detail-content,
+.product-detail-extra {
+  width: 50%;
+  padding: 40px;
+
+  display: flex;
 }
 
 .product-detail-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-  background-color: #1e293b;
-  padding: 40px;
-  border-radius: 16px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-  flex-wrap: wrap;
-  max-width: 1000px;
-  width: 100%;
 }
 
 .product-detail-images img {
+  display: flex;
   width: 300px;
   height: 300px;
-  object-fit: contain; /* Garante que a imagem se ajuste sem cortar */
-  border-radius: 12px;
-  background: #0f172a;
-  padding: 20px;
+
+  min-width: 300px;
+  min-height: 300px;
+
+  flex-wrap: wrap;
+
+  object-fit: contain;
+  /* Garante que a imagem se ajuste sem cortar */
 }
 
 .product-detail-info {
@@ -37,7 +40,8 @@
   text-align: center;
 }
 
-.product-detail-info h1 {
+.product-detail-info h1,
+.product-detail-extra h2 {
   font-size: 2.5rem;
   font-weight: bold;
   margin-bottom: 10px;
@@ -46,19 +50,18 @@
 .product-detail-price {
   font-size: 2rem;
   font-weight: bold;
-  color: #22c55e; /* Verde suave para preço */
   margin-bottom: 10px;
 }
 
 .product-detail-info p {
   font-size: 1.1rem;
-  color: #cbd5e1;
+  color: #000000;
 }
 
 .product-detail-info button {
   margin-top: 25px;
   background-color: #3b82f6;
-  color: white;
+  color: #FFF;
   border: none;
   padding: 12px 24px;
   font-size: 1rem;
@@ -73,35 +76,38 @@
   transform: scale(1.03);
 }
 
+/* DIVISÃO */
+
 .product-detail-extra {
-  margin-top: 40px;
-  background-color: #1e293b;
-  padding: 20px;
-  border-radius: 12px;
   text-align: center;
-  width: 100%;
-  max-width: 1000px;
+
+  flex-direction: column;
 }
 
 .product-detail-extra h2 {
   font-size: 1.5rem;
   margin-bottom: 10px;
-  color: #f1f5f9;
+  color: #000000;
+  text-align: left;
 }
 
 .product-detail-extra p {
   font-size: 1rem;
-  color: #e2e8f0;
+  width: 100% !important;
+  padding-right: 20px;
+  color: #000000;
+  text-align: left;
+  margin-top: 60px;
 }
 
 .added-button {
-  background-color: #e3eae7 !important;
-  color: #000000 !important;
+  background-color: #000000 !important;
+  color: #FFF !important;
   cursor: default;
 }
 
 .added-button:hover {
-  background-color: #a3aca8 !important;
-  color: #000000 !important;
+  background-color: #000000 !important;
+  color: #FFF !important;
   transform: none !important;
 }
